# CMakeList.txt : CMake project for testProject1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (testProject1 "testProject1.cpp" "testProject1.h" "Fruit.h" "Fruit.cpp" "Banana.cpp" "Banana.h")

# TODO: Add tests and install targets if needed.
